k8s/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: go-web-app
  namespace: default
  annotations:
    # REMOVED: nginx.ingress.kubernetes.io/rewrite-target: /
    # Added to handle standard app traffic smoothly
    kubernetes.io/ingress.class: "nginx" 
spec:
  ingressClassName: nginx
  rules:
  - host: go-web-app.local
    http:
      paths: 
      - path: /
        pathType: Prefix
        backend:
          service:
            name: go-web-app
            port:
              number: 80
